fix(components): make `Cap` inherit text align

--- a/src/components/ui/Cap/Cap.module.scss
+++ b/src/components/ui/Cap/Cap.module.scss
@@ -4,7 +4,7 @@ $capWeightLevel3: 900;
 .cap {
     margin: 0;
     color: inherit;
-    text-align: center;
+    text-align: inherit;
     font-family: $interFont;
     text-transform: uppercase;
     font-style: normal;
